--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,17 @@
-== README
+Rails Images-gallery
+====================
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+## Installation:
+================
+``` ruby
+    rvm use ruby-2.1.5@images-gallery
+    bundle
+```
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+## Database:
+=====================
+- Postgresql
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+## Deployment instructions
+==========================
